Add JDK 16+ instructions