@@ -106,6 +106,17 @@ Documentation from the google-java-format CLI tool :
   Do not remove unused imports. Imports will still be sorted.
 ```
 
+### JDK 16+ peculiarities
+
+Since google-java-forma uses JDK internal apis, if you need to run the plugin with JDK 16+, you must pass some additional arguments to the JVM.
+Those are described at https://github.com/google/google-java-format/releases/tag/v1.10.0.  
+
+Thanks to https://maven.apache.org/configure.html#mvn-jvm-config-file, you should be able to pass them to `.mvn/jvm.config` as follow:
+
+```
+--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+```
+
 ### Frequently asked questions
 
 #### If I have a multi-module project, do I need to install anything in the sub-projects?
